[package]
name = "gantry-api"
description = "The gantry HTTP API"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tyler Cook"]
readme = "README.md"
repository = "https://github.com/fossable/gantry"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["string"] }
gantry = { path = "../gantry" }
monero = "0.21.0"
monero-rpc = { version = "0.4.0", features = ["rpc_authentication"], optional = true }
redb = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
monero = ["dep:monero-rpc"]
aws = []
