[package]
name = "gantry"
description = "CLI interface for the gantry API"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.7", features = ["derive", "string"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
